# voxelization

./: .gitignore  CMakeLists.txt  README.md  auto_split_grid_operator.py  generate_grid_operators.py  generate_new_voxelizers.py  generate_solid_voxelizers.py
.github/workflows/: cmake-single-platform.yml
docs/: DEPENDENCIES.md  DEVELOPMENT.md  README.md  class_reference.md  examples.md  overview.md  performance.md
docs/zh/: README.md  class_reference.md  examples.md  overview.md
examples/: CMakeLists.txt  cube_renderer.cpp  voxelization_demo.cpp
include/core/: voxel_grid.hpp
include/environment/: EnvironmentNAV3D.hpp
include/operator/: ClosingOperator.hpp  ConnectedComponentsOperator.hpp  DifferenceOperator.hpp  DilateOperator.hpp  DistanceTransformOperator.hpp  ErodeOperator.hpp  FillOperator.hpp  InterpolationOperator.hpp  IntersectionOperator.hpp  OffsetOperator.hpp  OpeningOperator.hpp  SmoothOperator.hpp  UnionOperator.hpp  binary_operator.hpp  grid_operator.hpp  intersection_operator.hpp  union_operator.hpp
include/planner/: lazytheta_star.hpp  theta_star.hpp
include/renderer/: volume_renderer.hpp  voxel_renderer.hpp
include/storage/: svo.hpp  voxelstorage.hpp
include/voxelizer/: EisemannSolidVoxelizer.hpp  ImplicitSurfaceVoxelizer.hpp  LevelSetVoxelizer.hpp  SDFVoxelizer.hpp  SchwarzSolidVoxelizer.hpp  SurfaceVoxelizer.hpp  box_voxelizer.hpp  corridor_voxelizer.hpp  cylinder_voxelizer.hpp  line_voxelizer.hpp  multi_level_voxel_grid.hpp  point_cloud_voxelizer.hpp  polyhedron_voxelizer.hpp  polyline_voxelizer.hpp  sphere_voxelizer.hpp  spline_voxelizer.hpp  triangle_mesh_voxelizer.hpp  voxelizer.hpp  voxelizer_base.hpp
src/core/: voxel_grid.cpp
src/environment/: EnvironmentNAV3D.cpp
src/operator/: ClosingOperator.cpp  ConnectedComponentsOperator.cpp  DifferenceOperator.cpp  DilateOperator.cpp  DistanceTransformOperator.cpp  ErodeOperator.cpp  FillOperator.cpp  InterpolationOperator.cpp  IntersectionOperator.cpp  OffsetOperator.cpp  OpeningOperator.cpp  SmoothOperator.cpp  UnionOperator.cpp  grid_operator.cpp  grid_operator.cpp.bak  intersection_operator.cpp  union_operator.cpp
src/planner/: lazytheta_star.cpp  theta_star.cpp
src/renderer/: volume_renderer.cpp  voxel_renderer.cpp
src/storage/: svo.cpp  voxelstorage.cpp
src/voxelizer/: EisemannSolidVoxelizer.cpp  ImplicitSurfaceVoxelizer.cpp  LevelSetVoxelizer.cpp  SDFVoxelizer.cpp  SchwarzSolidVoxelizer.cpp  SurfaceVoxelizer.cpp  box_voxelizer.cpp  corridor_voxelizer.cpp  cylinder_voxelizer.cpp  line_voxelizer.cpp  multi_level_voxel_grid.cpp  point_cloud_voxelizer.cpp  polyline_voxelizer.cpp  sphere_voxelizer.cpp  spline_voxelizer.cpp  triangle_mesh_voxelizer.cpp  voxelizer.cpp
tests/: CMakeLists.txt  operator_test.cpp  solid_voxelizer_test.cpp  storage_test.cpp  voxelizer_new_test.cpp
tests/core/: voxel_grid_test.cpp
tests/operator/: operator_test.cpp
tests/renderer/: renderer_test.cpp
tests/storage/: storage_test.cpp
tests/voxelizer/: voxelizer_test.cpp
